<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.ProfileActivity">

    <TextView
        android:id="@+id/usernameProfileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Perfil de Utilizador: [Username]"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_keys_title"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profileKeysRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/newKeyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/key_value_hint"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/addKeyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_key_button" />

</LinearLayout>
